# linglong

./: CMakeLists.txt
archlinux/: PKGBUILD
debian/: changelog  linglong-bin.install  linglong-bin.postinst
src/builder/: CMakeLists.txt  main.cpp
src/builder/builder/: builder.cpp  builder.h  builder_config.cpp  builder_config.h  depend_fetcher.cpp  depend_fetcher.h  linglong_builder.cpp  linglong_builder.h  project.cpp  project.h  source_fetcher.cpp  source_fetcher.h  source_fetcher_p.h
src/builder/resource/: resource.qrc
src/cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
src/cli/cmd/: command_helper.cpp  command_helper.h
src/module/dbus_ipc/: dbus_app_manager_common.h  dbus_common.h  dbus_error.h  dbus_package_manager_common.h  dbus_system_helper_common.h  org.deepin.linglong.AppManager.xml  org.deepin.linglong.Job.xml  org.deepin.linglong.JobManager.xml  org.deepin.linglong.PackageManager.xml  org.deepin.linglong.SystemHelper.xml  register_meta_type.h
src/module/package/: bundle.cpp  bundle.h  bundle_p.h  info.cpp  info.h  package.cpp  package.h  ref.cpp  ref.h
src/module/repo/: ostree_repo.cpp  ostree_repo.h  ostree_repohelper.cpp  repo.cpp  repo.h  repo_client.cpp  repo_client.h
src/module/runtime/: app.cpp  app.h  app_config.h  container.cpp  container.h  oci.h  runtime.h
src/module/util/: connection.cpp  connection.h  const.h  file.cpp  file.h  httpclient.cpp  json.h  result.h  singleton.h  status_code.h  sysinfo.cpp  sysinfo.h  uuid.cpp  uuid.h  version.h
src/module/util/config/: config.cpp  config.h
src/module/util/http/: httpclient.cpp  httpclient.h
src/module/util/job/: job.cpp  job.h  job_controller.cpp  job_controller.h
src/module/util/serialize/: json.h  serialize.h  yaml.h
src/package_manager/: CMakeLists.txt  main.cpp
src/package_manager/impl/: app_status.cpp  app_status.h  job.cpp  job.h  job_manager.cpp  job_manager.h  package_database.cpp  package_database.h  package_manager.cpp  package_manager.h  package_manager_flatpak_impl.cpp  package_manager_flatpak_impl.h  package_manager_interface.h  package_manager_p.h  service_dbus_common.h  system_package_manager.cpp  system_package_manager.h  system_package_manager_p.h
src/service/: CMakeLists.txt  main.cpp
src/service/impl/: app_manager.cpp  app_manager.h  app_manager_p.h  package_manager.h  param_option.h  register_meta_type.h
src/service/misc/: config.yaml
src/service/misc/xdg/: linglong.xml
src/service/resource/: app_config.json  resource.qrc
src/system_helper/: CMakeLists.txt  main.cpp  system_helper.cpp  system_helper.h
src/system_helper/privilege/: privilege_install_portal.cpp  privilege_install_portal.h
test/: CMakeLists.txt  manager_test.cpp  package_manager_test.cpp
test/module/package/: package_info_test.cpp  ref_test.cpp
test/module/serialize/: qt_yaml.cpp  qt_yaml.h  serialize_test.cpp  serialize_test.h
test/module/util/: app_status_test.cpp  fs_test.cpp  httpclient_test.cpp  result_test.cpp  runner_test.cpp  uuid_test.cpp  xdg_test.cpp
tools/protype/virtual_base/: main.cpp
